fix scrollbar on chrome browser

--- a/src/components/burger-constructor/burger-constructor.module.css
+++ b/src/components/burger-constructor/burger-constructor.module.css
@@ -21,6 +21,16 @@
     list-style: none;
 }
 
+.ingredientsWrapper::-webkit-scrollbar {
+  width: 5px;
+  height: 8px;
+  background-color: #2f2f37;
+}
+
+.ingredientsWrapper::-webkit-scrollbar-thumb { /* треккер скроллбара */
+    background: #8585AD;
+}
+
 .orderBlock {
     display: flex;
     flex-direction: row;
