--- a/src/components/burger-ingredients/burger-ingredients.module.css
+++ b/src/components/burger-ingredients/burger-ingredients.module.css
@@ -11,3 +11,13 @@
     overflow-y: scroll;
     scrollbar-width: thin;
 }
+
+.ingredients::-webkit-scrollbar {
+  width: 5px;
+  height: 8px;
+  background-color: #2f2f37;
+}
+
+.ingredients::-webkit-scrollbar-thumb { /* треккер скроллбара */
+    background: #8585AD;
+}
